# debs2021

./: Cargo.toml  README.md  TESTING.md  build.rs
benches/: locating.rs
sql/: README.md  aqi.sql  calculate.sql  calculate_verbose.sql  create_tables.sql  fiveminutedata.sql  gen_import.sh  indices.sql  lastdayaqi.sql  setup.sql
src/: aggregate.rs  aqi.rs  io.rs  lib.rs  pipeline.rs  spliter.rs
