[package]
name = "debs2021"
version = "0.1.0"
authors = ["maxim <maxim.balsacq@hs-furtwangen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4.1"
prost = "0.7.0"
tokio = { version = "1.4.0", features = ["full"] }
prost-types = "0.7.0"
bytes = "1.0.1"
rstar = "0.8.2"
geo = "0.17.1"
chrono = "0.4.19"
thiserror = "1.0.24"
arrayvec = "0.7.0"
rayon = "1.5.0"
futures = "0.3.14"

[build-dependencies]
tonic-build = "0.4.1"

[profile.dev]
opt-level = 3
debug-assertions = true

[profile.release]
lto = "fat"
codegen-units = 1
debug = true

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "locating"
harness = false
